# total_segmentator

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: example_config.yaml
mri_seg_framework/: __init__.py  cli.py  config.py  inference.py  io_utils.py  logging_utils.py  pipeline.py  postprocessing.py  preprocessing.py  visualization.py
scripts/: download_models.py
