[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mri-seg-framework"
version = "0.1.0"
description = "Batch MRI multi-organ segmentation framework based on TotalSegmentator"
readme = "README.md"
requires-python = ">=3.10,<3.12"

[tool.setuptools.packages.find]
include = ["mri_seg_framework*"]
